[package]
name = "fzfrs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive, educational implementation of fuzzy search algorithms using Levenshtein distance"
license = "MIT"
repository = "https://github.com/yourusername/fzfrs"
documentation = "https://github.com/yourusername/fzfrs#readme"
readme = "README.md"
keywords = ["fuzzy-search", "levenshtein", "edit-distance", "string-matching", "algorithm"]
categories = ["algorithms", "text-processing"]

[dependencies]

[dev-dependencies]

[lib]
name = "fzfrs"
path = "src/lib.rs"

[[bin]]
name = "fzfrs"
path = "src/main.rs"
