[package]
name = "fuzzly"
version = "0.1.0"
edition = "2021"
authors = ["Fanaperana"]
description = "A comprehensive, educational implementation of fuzzy search algorithms using Levenshtein distance"
license = "MIT"
repository = "https://github.com/Fanaperana/fuzzy-search-rs"
documentation = "https://github.com/Fanaperana/fuzzy-search-rs#readme"
readme = "README.md"
keywords = [
    "fuzzy-search",
    "levenshtein",
    "edit-distance",
    "string-matching",
    "algorithm",
]
categories = ["algorithms", "text-processing"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "fuzzy_search"
harness = false

[lib]
name = "fuzzly"
path = "src/lib.rs"

[[bin]]
name = "fuzzly"
path = "src/main.rs"
